# TG-bot-CS_FK

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  database.db  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: main.yml
migrations/: env.py
migrations/versions/: 228ecd7e33ae_added_account_table.py  443e3b648445_fix_game_dificulty.py  7b8398785148_added_account_table.py  b0266e9c14fd_added_account_table.py  e99fba92fe12_fix.py  fd0f7a7b73be_added_account_table.py
projectC/: main.py  settings.py  stiker.py
projectC/core/: custom_keyboard_button.py  utils.py  utils_db.py
projectC/models/: models.py
src/: main.py  state_machine.py
src/core/: base.py  connector_for_alembic_and_alchemy.py  database.py  exeptions.py  query_db.py
src/core/models/: models.py
src/games/: binary_query.py  guess_query.py  haort_query.py  models.py
src/games/binary converter/: converter.py
src/games/binary_converter/: converter.py
src/games/guess_number/: guess_game.py  guess_query.py  stiker.py  utils.py
src/games/haort_pyramid/: haort_pyramid.py  haort_query.py  records_haort_game.py
src/user/: models.py  query.py  user_query.py
src/utils/: buttons.py  delete_image.py  find_nearest_numbers.py  stikers.py
